day.html events by category, styling

--- a/events/day.html
+++ b/events/day.html
@@ -265,6 +265,9 @@
                 </svg>
             </button>
         </section>
+
+        <!-- EVENTS -->
+        <ul id="category-container" class="category-container m-2rem"></ul>
     </main>
     <!-- FOOTER -->
     <footer>
@@ -288,7 +291,7 @@
                     <h1>Blijf op de hoogte</h1>
                     <h3>Schrijf je in op de nieuwsbrief van de Gentse Feesten</h3>
                     <form class="flex flex--col" name="email">
-                        <input type="email" placeholder="Jouw e-mailadres">
+                        <input name="newsletter-input" type="email" placeholder="Jouw e-mailadres">
                         <button class="uppercase">Inschrijven</button>
                     </form>
                     <p>De stad Gent zal de persoonsgegevens die je invult met respect voor jouw <a href="#">privacy</a> behandelen.</p>
