--- a/news.html
+++ b/news.html
@@ -21,7 +21,7 @@
                         <a href="news.html">Nieuws</a>
                     </li>
                     <li>
-                        <a href="events/day.html">Programma</a>
+                        <a href="events/day.html?day=14">Programma</a>
                     </li>
                     <li>
                         <a href="#">Praktisch</a>
@@ -145,7 +145,7 @@
                     <h1>Blijf op de hoogte</h1>
                     <h3>Schrijf je in op de nieuwsbrief van de Gentse Feesten</h3>
                     <form class="flex flex--col" name="email">
-                        <input type="email" placeholder="Jouw e-mailadres">
+                        <input name="newsletter-input" type="email" placeholder="Jouw e-mailadres">
                         <button class="uppercase">Inschrijven</button>
                     </form>
                     <p>De stad Gent zal de persoonsgegevens die je invult met respect voor jouw <a href="#">privacy</a> behandelen.</p>
