--- a/events/day.html
+++ b/events/day.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/static/img/icons/favicon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../static/img/icons/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../static/css/reset.css">
     <link rel="stylesheet" href="../static/css/main.css">
     <title>Gentse Feesten 2023</title>
